chapters/11/snippets/kustomize/kustomize-nginx/base/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  selector:
    role: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
