chapters/11/snippets/kustomize/kustomize-nginx/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver
spec:
  rules:
  - host: website-demo.apps.CLUSTER_NAME.DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webserver
            port:
              number: 80
